syntax = "proto3";

package uber.yarpc.internal.examples.kv;

option go_package = "kv";

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 2;
}

message SetValueRequest {
  string key = 1;
  string value = 2;
}

message SetValueResponse {}

service API {
  rpc GetValue(GetValueRequest) returns (GetValueResponse);
  rpc SetValue(SetValueRequest) returns (SetValueResponse);
}
